<resources>

    <string name="app_name">明匠智能系统</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- 功能点名字-->
    <string name="oper_instruction">岗位作业指导书</string>
    <string name="print_qr_code">打印二维码</string>
    <string name="quality_inspection">质量检测</string>
    <string name="equipment_monitor">设备监控</string>
    <string name="product_monitor">生产监控</string>
    <string name="line_storage">线边仓库</string>
    <string name ="fixe_scan_code_gun_proof">固定扫码枪防错</string>
    <string name="materials_management">物料管理</string>
    <string name="onoff_line">上下线</string>
</resources>
